my-app/src/components/Navbar/Navbar.css
.navbar-logo img{
    width: 16rem;
}
.navbar {
    background: linear-gradient(90deg, rgb(221, 221, 221) 0%, rgb(221, 221, 221) 100%);
    height: 90px;
    display: flex;
    justify-content: center;
    align-items: center;
    position: sticky;
    top: 0;
    z-index: 999;
  }
  
  .navbar-container {
    display: flex;
    justify-content: center;
    align-items: center;
    height: 80px;
    max-width: 1500px;
  }
  
  .navbar-logo {
    color: #fff;
    justify-self: start;
    margin-left: 10px;
    cursor: pointer;
    text-decoration: none;
    font-size: 2rem;
    display: flex;
    align-items: center;
  }
  
  .fa-typo3 {
    margin-left: 0.5rem;
    font-size: 1.8rem;
  }
  
  .nav-menu {
    display: grid;
    grid-template-columns: repeat(4, auto);
    grid-gap: 10px;
    list-style: none;
    text-align: center;
    width: 80vw;
    justify-content: end;
    
  }
  
  .nav-item strong{
    margin-top: 6vh;
    font-size: 2.2rem;
  }
  
  .nav-links {
    text-decoration: none;
    color: rgb(2,127,119);
    font-size: 2.1rem;
    display: flex;
    align-items: center;
    padding: 0.5rem 1rem;
    height: 100%;
  }
  
  .nav-links:hover {
    text-decoration: none;
    color: rgb(2,127,119);
    border-bottom: 4px solid #fff;
    transition: all 0.2s ease-out;
  }
  
  .fa-bars {
    color: rgb(2,127,119);
  }
  
  .nav-links-mobile {
    display: none;
  }
  
  .menu-icon {
    display: none;
  }

  @media screen and (max-width: 960px) {
    .NavbarItems {
      position: relative;
    }

    .navbar-container {
      height: 60px;
      max-width: 100vw;
    }
  
    .nav-menu {
      display: flex;
      flex-direction: column;
      width: 40vw;
      height: 25vh;
      position: absolute;
      top: 80px;
      left: 100%;
      opacity: 0.9;
      transition: all 0.5s ease;
    }

    .navbar-logo img{
      width: 11rem;
      margin-left: 2vw;
      margin-top: -1vh;
  }
  
    .nav-menu.active {
      background:rgb(221, 221, 221);
      left: 0;
      margin-left: 60%;
      opacity: 0.87;
      transition: all 0.5s ease;
      z-index: 1;
    }
  
    .nav-links {
      text-align: center;
      padding: 2rem;
      width: 100%;
      display: table;
    }
  
    .nav-links:hover {
      background-color: #fff;
      color: rgb(221, 221, 221);
      border-radius: 0;
    }
  
    .navbar-logo {
      position: absolute;
      top: 0;
      left: 0;
      transform: translate(25%, 50%);
    }
  
    .menu-icon {
      display: block;
      position: absolute;
      top: 0;
      right: 0;
      transform: translate(-100%, 60%);
      font-size: 2.8rem;
      cursor: pointer;
    }
  
    .fa-times {
      color: #fff;
      font-size: 2rem;
    }
  
    .nav-links-mobile {
      display: block;
      text-align: center;
      margin: 2rem auto;
      border-radius: 4px;
      width: 80%;
      text-decoration: none;
      font-size: 1.5rem;
      background-color: transparent;
      color: #fff;
      padding: 14px 20px;
      border: 1px solid #fff;
      transition: all 0.3s ease-out;
    }
  
    .nav-links-mobile:hover {
      background: #fff;
      color: rgb(221, 221, 221);
      transition: 250ms;
    }
  }

  @media screen and (max-width: 760px) {
    .NavbarItems {
      position: relative;
    }

    .navbar-container {
      height: 60px;
      max-width: 100vw;
    }
  
    .nav-menu {
      display: flex;
      flex-direction: column;
      width: 50%;
      height: 40vh;
      position: absolute;
      top: 80px;
      left: 100%;
      opacity: 0.9;
      transition: all 0.5s ease;
    }

    .navbar-logo img{
      width: 11rem;
      margin-left: -4vw;
      margin-top: -1vh;
  }
  
    .nav-menu.active {
      background:rgb(221, 221, 221);
      left: 0;
      margin-left: 50%;
      opacity: 0.87;
      transition: all 0.5s ease;
      z-index: 1;
    }
  
    .nav-links {
      text-align: center;
      padding: 2rem;
      width: 100%;
      display: table;
    }
  
    .nav-links:hover {
      background-color: #fff;
      color: rgb(221, 221, 221);
      border-radius: 0;
    }
  
    .navbar-logo {
      position: absolute;
      top: 0;
      left: 0;
      transform: translate(25%, 50%);
    }
  
    .menu-icon {
      display: block;
      position: absolute;
      top: 0;
      right: 0;
      transform: translate(-100%, 60%);
      font-size: 2.8rem;
      cursor: pointer;
    }
  
    .fa-times {
      color: #fff;
      font-size: 2rem;
    }
  
    .nav-links-mobile {
      display: block;
      text-align: center;
      margin: 2rem auto;
      border-radius: 4px;
      width: 80%;
      text-decoration: none;
      font-size: 1.5rem;
      background-color: transparent;
      color: #fff;
      padding: 14px 20px;
      border: 1px solid #fff;
      transition: all 0.3s ease-out;
    }
  
    .nav-links-mobile:hover {
      background: #fff;
      color: rgb(221, 221, 221);
      transition: 250ms;
    }
  }

